plugins/kotlin/idea/tests/testData/checker/codeFragments/localVariables.kt.fragment.k2
aaa1 + <error descr="[UNRESOLVED_REFERENCE]">aaa3</error>